enable proxy command

--- a/init.conf
+++ b/init.conf
@@ -35,6 +35,8 @@ upf nwi name sgi vrf 2
 upf gtpu endpoint ip 172.21.16.1 nwi cp teid 0x80000000/2
 upf gtpu endpoint ip 172.20.16.105 nwi epc teid 0x80000000/2
 
+upf enable proxy
+
 create upf application proxy name Gold
 upf application Gold rule 1 add l7 regex ^http://172.20.16.75/Gold/.*$
 upf application Gold rule 2 add l7 regex ^https://dmock/.*$
